# duckdb-webhook-gateway

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_endpoints.py
etc/: users.csv
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx
frontend/src/api/: apiClient.ts
frontend/src/components/: Layout.tsx  PageHeader.tsx
frontend/src/pages/: Dashboard.tsx  ReferenceTableList.tsx  ReferenceTableUpload.tsx  SqlQuery.tsx  UdfForm.tsx  UdfList.tsx  WebhookDetail.tsx  WebhookForm.tsx  WebhookList.tsx  WebhookTester.tsx
src/: app.py
tests/: conftest.py  test_api_endpoints.py  test_db_manager.py  test_event_processing.py  test_helper.py  test_integration.py  test_reference_and_udf.py  test_webhook_management.py
